fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -114,15 +114,15 @@ h2:hover {
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
     overflow: hidden; /* Prevent scrolling within the sidebar */
 }
 
 .intro-content {
     display: flex;
     flex-direction: column;
+    align-items: center; /* Center content horizontally */
     max-width: 600px;
-    overflow: hidden; /* Prevent growing */
+    width: 100%; /* Ensure content doesn't exceed maximum width */
 }
 
 .cursor {
@@ -180,6 +180,6 @@ h2:hover {
 
     .intro-content{
         padding:0 1rem;
+        max-height:100vh;
     }
-
 }
